--- a/custom_components/timer_24h/manifest.json
+++ b/custom_components/timer_24h/manifest.json
@@ -8,5 +8,6 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/davidss20/home-assistant-24h-timer-integration/issues",
   "requirements": [],
-  "version": "4.6.0"
+  "version": "4.6.1",
+  "icon": "mdi:clock-time-four-outline"
 }
