--- a/custom_components/timer_24h/manifest.json
+++ b/custom_components/timer_24h/manifest.json
@@ -8,6 +8,6 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/davidss20/home-assistant-24h-timer-integration/issues",
   "requirements": [],
-  "version": "4.6.2",
-  "icon": "icon"
+  "version": "4.6.3",
+  "icon": "mdi:home-clock"
 }
