--- a/custom_components/timer_24h/manifest.json
+++ b/custom_components/timer_24h/manifest.json
@@ -5,9 +5,9 @@
   "config_flow": true,
   "documentation": "https://github.com/davidss20/home-assistant-24h-timer-integration",
   "integration_type": "device",
-  "iot_class": "local_polling",
+  "iot_class": "local_push",
   "issue_tracker": "https://github.com/davidss20/home-assistant-24h-timer-integration/issues",
   "requirements": [],
-  "version": "5.3.0",
+  "version": "5.4.0",
   "icon": "mdi:home-clock"
 }
