--- a/custom_components/timer_24h/manifest.json
+++ b/custom_components/timer_24h/manifest.json
@@ -8,6 +8,6 @@
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/davidss20/home-assistant-24h-timer-integration/issues",
   "requirements": [],
-  "version": "1.1.0-beta.4",
+  "version": "1.1.0",
   "icon": "mdi:home-clock"
 }
